--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "ymap3-components": "^1.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
